@@ -57,10 +57,12 @@ if (isLocaleSupported) then
 	L_GLOBALSTRINGS["Disabled"]																	= "Disabled"
 	L_GLOBALSTRINGS["Dialog Removed"]															= "Removed \"%s\" from database."
 	L_GLOBALSTRINGS["Cinematic or Movie Not Skipped"]											= "The cinematic or movie was intentionally NOT skipped!"
+	L_GLOBALSTRINGS["Party Play Enabled Warning Text"]											= "[|cffFF7900WARNING|r] You've joined a group with Party Play enabled."
 	L_GLOBALSTRINGS["War Mode Reminder: Alliance"]												= "You leveled to 20! You should return to Stormwind City, so I can enable War Mode."
 	L_GLOBALSTRINGS["War Mode Reminder: Horde"]													= "You leveled to 20! You should return to Orgrimmar, so I can enable War Mode."
 	L_GLOBALSTRINGS["Equipped Item Level is Nil"]												= "[|cffFF7900WARNING|r] Equipped item level is unavailable. Please open and close your character pane."
 	L_GLOBALSTRINGS["Quest Turned In Text"]														= "Turned in"
+	L_GLOBALSTRINGS["Quest Removed Text"]														= "Removed"
 	L_GLOBALSTRINGS["Quest Accepted Text"]														= "Accepted"
 	L_GLOBALSTRINGS["Burning Crusade"]															= "Burning Crusade"
 	L_GLOBALSTRINGS["Lich King"]																= "Lich King"
